--- a/ceny.html
+++ b/ceny.html
@@ -10,9 +10,176 @@
     <div class="fix"><img src = "agr.png" class="image"><div class="textnusl">АГРОУСАДЬБА "GREEN HOUSE"</div></div>
 
     <div class="text9">Цены</div>
+
+<div class="tab1">
+<table style="border: 1px solid rgb(161, 155, 155);">
+  <thead>
+    <tr>
+      <th style="border: 1px solid rgb(161, 155, 155);"><b>Наименование</b></th>
+      <th style="border: 1px solid rgb(161, 155, 155);"><b>Вместимость</b></th>
+      <th style="border: 1px solid rgb(161, 155, 155);"><b>Сутки</b></th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td style="border: 1px solid rgb(161, 155, 155); text-align: center; border: 1px solid black; padding: 4px;">Дом над водой</td>
+      <td style="border: 1px solid rgb(161, 155, 155); text-align: center; border: 1px solid black; padding: 4px;">2-4</td>
+      <td style="border: 1px solid rgb(161, 155, 155); text-align: center; border: 1px solid black; padding: 4px;">300 BYN</td>
+    </tr>
+    <tr>
+      <td style="border: 1px solid rgb(161, 155, 155); text-align: center; border: 1px solid black; padding: 4px;">Уютный дом</td>
+      <td style="border: 1px solid rgb(161, 155, 155); text-align: center; border: 1px solid black; padding: 4px;">6</td>
+      <td style="border: 1px solid rgb(161, 155, 155); text-align: center; border: 1px solid black; padding: 4px;">400 BYN</td>
+    </tr>
+    <tr>
+      <td style="border: 1px solid rgb(161, 155, 155); text-align: center; border: 1px solid black; padding: 4px;">Семейный дом</td>
+      <td style="border: 1px solid rgb(161, 155, 155); text-align: center; border: 1px solid black; padding: 4px;">6</td>
+      <td style="border: 1px solid rgb(161, 155, 155); text-align: center; border: 1px solid black; padding: 4px;">400 BYN</td>
+    </tr>
+    <tr>
+      <td style="border: 1px solid rgb(161, 155, 155); text-align: center; border: 1px solid black; padding: 4px;">Гостевой дом</td>
+      <td style="border: 1px solid rgb(161, 155, 155); text-align: center; border: 1px solid black; padding: 4px;">11</td>
+      <td style="border: 1px solid rgb(161, 155, 155); text-align: center; border: 1px solid black; padding: 4px;">750 BYN</td>
+    </tr>
+    <tr>
+      <td style="border: 1px solid rgb(161, 155, 155); text-align: center; border: 1px solid black; padding: 4px;">Банный дом</td>
+      <td style="border: 1px solid rgb(161, 155, 155); text-align: center; border: 1px solid black; padding: 4px;">14</td>
+      <td style="border: 1px solid rgb(161, 155, 155); text-align: center; border: 1px solid black; padding: 4px;">750 BYN</td>
+    </tr>
+    <tr>
+      <td style="border: 1px solid rgb(161, 155, 155); text-align: center; border: 1px solid black; padding: 4px;">Новый коттедж</td>
+      <td style="border: 1px solid rgb(161, 155, 155); text-align: center; border: 1px solid black; padding: 4px;">20</td>
+      <td style="border: 1px solid rgb(161, 155, 155); text-align: center; border: 1px solid black; padding: 4px;">1500 BYN</td>
+    </tr>
+  </tbody>
+</table>
 </div>
 
-<div class="text7"><b><a href="index.html" target="_self">🏡</a></b></div>
+
+<div class="tab2">
+<table style="border: 1px solid rgb(161, 155, 155);">
+  <thead>
+    <tr>
+      <th style="border: 1px solid rgb(161, 155, 155);">Наименование</th>
+      <th style="border: 1px solid rgb(161, 155, 155);">Цена</th>
+      <th style="border: 1px solid rgb(161, 155, 155);">Кол-во чел.</th>
+      <th style="border: 1px solid rgb(161, 155, 155);">Сеанс</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td style="border: 1px solid rgb(161, 155, 155); text-align: center; border: 1px solid black; padding: 4px;">Большая баня + Терраса</td>
+      <td style="border: 1px solid rgb(161, 155, 155); text-align: center; border: 1px solid black; padding: 4px;">450 BYN</td>
+      <td style="border: 1px solid rgb(161, 155, 155); text-align: center; border: 1px solid black; padding: 4px;">10-15</td>
+      <td style="border: 1px solid rgb(161, 155, 155); text-align: center; border: 1px solid black; padding: 4px;">4-6 ч.</td>
+    </tr>
+    <tr>
+      <td style="border: 1px solid rgb(161, 155, 155); text-align: center; border: 1px solid black; padding: 4px;">СПА комплекс (Аквазона)</td>
+      <td style="border: 1px solid rgb(161, 155, 155); text-align: center; border: 1px solid black; padding: 4px;">300 BYN</td>
+      <td style="border: 1px solid rgb(161, 155, 155); text-align: center; border: 1px solid black; padding: 4px;">10</td>
+      <td style="border: 1px solid rgb(161, 155, 155); text-align: center; border: 1px solid black; padding: 4px;">2 ч.</td>
+    </tr>
+    <tr>
+      <td style="border: 1px solid rgb(161, 155, 155); text-align: center; border: 1px solid black; padding: 4px;">СПА комплекс (Аквазона)</td>
+      <td style="border: 1px solid rgb(161, 155, 155); text-align: center; border: 1px solid black; padding: 4px;">200 BYN</td>
+      <td style="border: 1px solid rgb(161, 155, 155); text-align: center; border: 1px solid black; padding: 4px;">2-4</td>
+      <td style="border: 1px solid rgb(161, 155, 155); text-align: center; border: 1px solid black; padding: 4px;">2 ч.</td>
+    </tr>
+    <tr>
+      <td style="border: 1px solid rgb(161, 155, 155); text-align: center; border: 1px solid black; padding: 4px;">Баня на берегу реки с вениками</td>
+      <td style="border: 1px solid rgb(161, 155, 155); text-align: center; border: 1px solid black; padding: 4px;">200 BYN</td>
+      <td style="border: 1px solid rgb(161, 155, 155); text-align: center; border: 1px solid black; padding: 4px;">10</td>
+      <td style="border: 1px solid rgb(161, 155, 155); text-align: center; border: 1px solid black; padding: 4px;">3 ч.</td>
+    </tr>
+  </tbody>
+</table>
+</div>
+
+
+
+<div class="tab3">
+<table style="border: 1px solid rgb(161, 155, 155);">
+  <thead>
+    <tr>
+      <th style="border: 1px solid rgb(161, 155, 155);">Наименование</th>
+      <th style="border: 1px solid rgb(161, 155, 155);">Цена, BYN</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td style="border: 1px solid rgb(161, 155, 155); text-align: left; text-align: center; border: 1px solid black; padding: 4px;">Завтрак</td>
+      <td style="border: 1px solid rgb(161, 155, 155); text-align: center; border: 1px solid black; padding: 4px;">15</td>
+    </tr>
+    <tr>
+      <td style="border: 1px solid rgb(161, 155, 155); text-align: left; text-align: center; border: 1px solid black; padding: 4px;">Обед</td>
+      <td style="border: 1px solid rgb(161, 155, 155); text-align: center; border: 1px solid black; padding: 4px;">35</td>
+    </tr>
+    <tr>
+      <td style="border: 1px solid rgb(161, 155, 155); text-align: left; text-align: center; border: 1px solid black; padding: 4px;">обычный Ужин 1 горячее</td>
+      <td style="border: 1px solid rgb(161, 155, 155); text-align: center; border: 1px solid black; padding: 4px;">60</td>
+    </tr>
+    <tr>
+      <td style="border: 1px solid rgb(161, 155, 155); text-align: left; text-align: center; border: 1px solid black; padding: 4px;">обычный Ужин 2 горячих</td>
+      <td style="border: 1px solid rgb(161, 155, 155); text-align: center; border: 1px solid black; padding: 4px;">80</td>
+    </tr>
+    <tr>
+      <td style="border: 1px solid rgb(161, 155, 155); text-align: left; text-align: center; border: 1px solid black; padding: 4px;">Банкетный ужин с меню Гриль</td>
+      <td style="border: 1px solid rgb(161, 155, 155); text-align: center; border: 1px solid black; padding: 4px;">105</td>
+    </tr>
+    <tr>
+      <td style="border: 1px solid rgb(161, 155, 155); text-align: left; text-align: center; border: 1px solid black; padding: 4px;">Банкетный ужин с доп. меню</td>
+      <td style="border: 1px solid rgb(161, 155, 155); text-align: center; border: 1px solid black; padding: 4px;">135</td>
+    </tr>
+    <tr>
+      <td style="border: 1px solid rgb(161, 155, 155); text-align: left; text-align: center; border: 1px solid black; padding: 4px;">Детский лагерь меню пансион</td>
+      <td style="border: 1px solid rgb(161, 155, 155); text-align: center; border: 1px solid black; padding: 4px;">95</td>
+    </tr>
+    <tr>
+      <td style="border: 1px solid rgb(161, 155, 155); text-align: left; text-align: center; border: 1px solid black; padding: 4px;">3-х разовое меню пансион</td>
+      <td style="border: 1px solid rgb(161, 155, 155); text-align: center; border: 1px solid black; padding: 4px;">80</td>
+    </tr>
+    <tr>
+      <td style="border: 1px solid rgb(161, 155, 155); text-align: left; text-align: center; border: 1px solid black; padding: 4px;">Новогодняя ночь</td>
+      <td style="border: 1px solid rgb(161, 155, 155); text-align: center; border: 1px solid black; padding: 4px;">220</td>
+    </tr>
+    <tr>
+      <td style="border: 1px solid rgb(161, 155, 155); text-align: left; text-align: center; border: 1px solid black; padding: 4px;">Бизнес встреча фуршет-обед-ужин-аренда зала</td>
+      <td style="border: 1px solid rgb(161, 155, 155); text-align: center; border: 1px solid black; padding: 4px;">135</td>
+    </tr>
+    <tr>
+      <td style="border: 1px solid rgb(161, 155, 155); text-align: left; text-align: center; border: 1px solid black; padding: 4px;">Свадебный фуршет</td>
+      <td style="border: 1px solid rgb(161, 155, 155); text-align: center; border: 1px solid black; padding: 4px;">15</td>
+    </tr>
+    <tr>
+      <td style="border: 1px solid rgb(161, 155, 155); text-align: left; text-align: center; border: 1px solid black; padding: 4px;">Свадебный банкет</td>
+      <td style="border: 1px solid rgb(161, 155, 155); text-align: center; border: 1px solid black; padding: 4px;">135</td>
+    </tr>
+    <tr>
+      <td style="border: 1px solid rgb(161, 155, 155); text-align: left; text-align: center; border: 1px solid black; padding: 4px;">Программа выпускной</td>
+      <td style="border: 1px solid rgb(161, 155, 155); text-align: center; border: 1px solid black; padding: 4px;">230</td>
+    </tr>
+    <tr>
+      <td style="border: 1px solid rgb(161, 155, 155); text-align: left; text-align: center; border: 1px solid black; padding: 4px;">Программа масленица 6ч</td>
+      <td style="border: 1px solid rgb(161, 155, 155); text-align: center; border: 1px solid black; padding: 4px;">200</td>
+    </tr>
+    <tr>
+      <td style="border: 1px solid rgb(161, 155, 155); text-align: left; text-align: center; border: 1px solid black; padding: 4px;">Кофе-пауза</td>
+      <td style="border: 1px solid rgb(161, 155, 155); text-align: center; border: 1px solid black; padding: 4px;">5</td>
+    </tr>
+  </tbody>
+</table>
+</div>
+
+
+<div class="c1">Аренда дома</div>
+<div class="c2">Аренда бани</div>
+<div class="c3">Питание</div>
+<div class="c4">1</div>
+
+
+</div>
+
+<div class="text7"><b><a href="index.html" target="_self"><img width="90px" height="90px" src="house.png"></a></b></div>
 
 </body>
 </html>
