--- a/index.html
+++ b/index.html
@@ -13,15 +13,6 @@
 
 
 <div class="textn">АГРОУСАДЬБА "GREEN HOUSE"</div>
-
-
-    <button class="btn1"></button>
-    <button class="btn2"></button>
-    <button class="btn3"></button>
-    <button class="btn4"></button>
-    <button class="btn5"></button>
-    <button class="btn6"></button>
-
     
     <div class="text1"><b><a href="uslugi.html"
     target="_self">Услуги</a></b></div> <div class="text2"><b><a
@@ -33,6 +24,17 @@
     <div class="text6"><b><a href="onas.html" target="_self">О нас</a></b></div> 
   </div>
 
+    <div class="k1"><a href="uslugi.html" target="_self"><img width="150px" height="150px" src="uslugi.png"></a></div>
+        
+    <div class="k2"><a href="ceny.html" target="_self"><img width="150px" height="150px" src="ceny.png"></a></div>
+
+    <div class="k3"><a href="bronirovanie.html" target="_self"><img width="150px" height="150px" src="bronirovanie.png"></a></div>
+
+    <div class="k4"><a href="kontakty.html" target="_self"><img width="150px" height="150px" src="kontakty.png"></a></div>
+
+    <div class="k5"><a href="photo.html" target="_self"><img width="150px" height="150px" src="photo.png"></a></div>
+
+    <div class="k6"><a href="onas.html" target="_self"><img width="150px" height="150px" src="onas.png"></a></div>
 
 </body>
 </html>
