--- a/onas.html
+++ b/onas.html
@@ -50,7 +50,7 @@
 
 </div>
 
-<div class="text7"><b><a href="index.html" target="_self">🏡</a></b></div>
+<div class="text7"><b><a href="index.html" target="_self"><img width="90px" height="90px" src="house.png"></a></b></div>
 
 </div>
 
