--- a/uslugi.html
+++ b/uslugi.html
@@ -48,7 +48,7 @@
 </ul></div>
 
 </div>
-<div class="text7"><b><a href="index.html" target="_self">🏡</a></b></div>
+<div class="text7"><b><a href="index.html" target="_self"><img width="90px" height="90px" src="house.png"></a></b></div>
 
 </body>
 </html>
