--- a/ceny.html
+++ b/ceny.html
@@ -9,8 +9,7 @@
 <div class="container">
     <div class="fix"><img src = "agr.png" class="image"><div class="textnusl">АГРОУСАДЬБА "GREEN HOUSE"</div></div>
 
-    <div class="text9">Цены</div>
-
+    <div class="fix"><div class="sq"></div><div class="text9">Цены</div></div>
 <div class="tab1">
 <table style="border: 1px solid rgb(161, 155, 155);">
   <thead>
@@ -107,63 +106,63 @@
   </thead>
   <tbody>
     <tr>
-      <td style="border: 1px solid rgb(161, 155, 155); text-align: left; text-align: center; border: 1px solid black; padding: 4px;">Завтрак</td>
+      <td style="border: 1px solid rgb(161, 155, 155); text-align: left; border: 1px solid black; padding: 4px;">Завтрак</td>
       <td style="border: 1px solid rgb(161, 155, 155); text-align: center; border: 1px solid black; padding: 4px;">15</td>
     </tr>
     <tr>
-      <td style="border: 1px solid rgb(161, 155, 155); text-align: left; text-align: center; border: 1px solid black; padding: 4px;">Обед</td>
+      <td style="border: 1px solid rgb(161, 155, 155); text-align: left; border: 1px solid black; padding: 4px;">Обед</td>
       <td style="border: 1px solid rgb(161, 155, 155); text-align: center; border: 1px solid black; padding: 4px;">35</td>
     </tr>
     <tr>
-      <td style="border: 1px solid rgb(161, 155, 155); text-align: left; text-align: center; border: 1px solid black; padding: 4px;">обычный Ужин 1 горячее</td>
+      <td style="border: 1px solid rgb(161, 155, 155); text-align: left; border: 1px solid black; padding: 4px;">обычный Ужин 1 горячее</td>
       <td style="border: 1px solid rgb(161, 155, 155); text-align: center; border: 1px solid black; padding: 4px;">60</td>
     </tr>
     <tr>
-      <td style="border: 1px solid rgb(161, 155, 155); text-align: left; text-align: center; border: 1px solid black; padding: 4px;">обычный Ужин 2 горячих</td>
+      <td style="border: 1px solid rgb(161, 155, 155); text-align: left; border: 1px solid black; padding: 4px;">обычный Ужин 2 горячих</td>
       <td style="border: 1px solid rgb(161, 155, 155); text-align: center; border: 1px solid black; padding: 4px;">80</td>
     </tr>
     <tr>
-      <td style="border: 1px solid rgb(161, 155, 155); text-align: left; text-align: center; border: 1px solid black; padding: 4px;">Банкетный ужин с меню Гриль</td>
+      <td style="border: 1px solid rgb(161, 155, 155); text-align: left; border: 1px solid black; padding: 4px;">Банкетный ужин с меню Гриль</td>
       <td style="border: 1px solid rgb(161, 155, 155); text-align: center; border: 1px solid black; padding: 4px;">105</td>
     </tr>
     <tr>
-      <td style="border: 1px solid rgb(161, 155, 155); text-align: left; text-align: center; border: 1px solid black; padding: 4px;">Банкетный ужин с доп. меню</td>
+      <td style="border: 1px solid rgb(161, 155, 155); text-align: left; border: 1px solid black; padding: 4px;">Банкетный ужин с доп. меню</td>
       <td style="border: 1px solid rgb(161, 155, 155); text-align: center; border: 1px solid black; padding: 4px;">135</td>
     </tr>
     <tr>
-      <td style="border: 1px solid rgb(161, 155, 155); text-align: left; text-align: center; border: 1px solid black; padding: 4px;">Детский лагерь меню пансион</td>
+      <td style="border: 1px solid rgb(161, 155, 155); text-align: left; border: 1px solid black; padding: 4px;">Детский лагерь меню пансион</td>
       <td style="border: 1px solid rgb(161, 155, 155); text-align: center; border: 1px solid black; padding: 4px;">95</td>
     </tr>
     <tr>
-      <td style="border: 1px solid rgb(161, 155, 155); text-align: left; text-align: center; border: 1px solid black; padding: 4px;">3-х разовое меню пансион</td>
+      <td style="border: 1px solid rgb(161, 155, 155); text-align: left; border: 1px solid black; padding: 4px;">3-х разовое меню пансион</td>
       <td style="border: 1px solid rgb(161, 155, 155); text-align: center; border: 1px solid black; padding: 4px;">80</td>
     </tr>
     <tr>
-      <td style="border: 1px solid rgb(161, 155, 155); text-align: left; text-align: center; border: 1px solid black; padding: 4px;">Новогодняя ночь</td>
+      <td style="border: 1px solid rgb(161, 155, 155); text-align: left; border: 1px solid black; padding: 4px;">Новогодняя ночь</td>
       <td style="border: 1px solid rgb(161, 155, 155); text-align: center; border: 1px solid black; padding: 4px;">220</td>
     </tr>
     <tr>
-      <td style="border: 1px solid rgb(161, 155, 155); text-align: left; text-align: center; border: 1px solid black; padding: 4px;">Бизнес встреча фуршет-обед-ужин-аренда зала</td>
+      <td style="border: 1px solid rgb(161, 155, 155); text-align: left; border: 1px solid black; padding: 4px;">Бизнес встреча фуршет-обед-ужин-аренда зала</td>
       <td style="border: 1px solid rgb(161, 155, 155); text-align: center; border: 1px solid black; padding: 4px;">135</td>
     </tr>
     <tr>
-      <td style="border: 1px solid rgb(161, 155, 155); text-align: left; text-align: center; border: 1px solid black; padding: 4px;">Свадебный фуршет</td>
+      <td style="border: 1px solid rgb(161, 155, 155); text-align: left; border: 1px solid black; padding: 4px;">Свадебный фуршет</td>
       <td style="border: 1px solid rgb(161, 155, 155); text-align: center; border: 1px solid black; padding: 4px;">15</td>
     </tr>
     <tr>
-      <td style="border: 1px solid rgb(161, 155, 155); text-align: left; text-align: center; border: 1px solid black; padding: 4px;">Свадебный банкет</td>
+      <td style="border: 1px solid rgb(161, 155, 155); text-align: left; border: 1px solid black; padding: 4px;">Свадебный банкет</td>
       <td style="border: 1px solid rgb(161, 155, 155); text-align: center; border: 1px solid black; padding: 4px;">135</td>
     </tr>
     <tr>
-      <td style="border: 1px solid rgb(161, 155, 155); text-align: left; text-align: center; border: 1px solid black; padding: 4px;">Программа выпускной</td>
+      <td style="border: 1px solid rgb(161, 155, 155); text-align: left; border: 1px solid black; padding: 4px;">Программа выпускной</td>
       <td style="border: 1px solid rgb(161, 155, 155); text-align: center; border: 1px solid black; padding: 4px;">230</td>
     </tr>
     <tr>
-      <td style="border: 1px solid rgb(161, 155, 155); text-align: left; text-align: center; border: 1px solid black; padding: 4px;">Программа масленица 6ч</td>
+      <td style="border: 1px solid rgb(161, 155, 155); text-align: left; border: 1px solid black; padding: 4px;">Программа масленица 6ч</td>
       <td style="border: 1px solid rgb(161, 155, 155); text-align: center; border: 1px solid black; padding: 4px;">200</td>
     </tr>
     <tr>
-      <td style="border: 1px solid rgb(161, 155, 155); text-align: left; text-align: center; border: 1px solid black; padding: 4px;">Кофе-пауза</td>
+      <td style="border: 1px solid rgb(161, 155, 155); text-align: left; border: 1px solid black; padding: 4px;">Кофе-пауза</td>
       <td style="border: 1px solid rgb(161, 155, 155); text-align: center; border: 1px solid black; padding: 4px;">5</td>
     </tr>
   </tbody>
@@ -179,7 +178,7 @@
 
 </div>
 
-<div class="text7"><b><a href="index.html" target="_self"><img width="90px" height="90px" src="house.png"></a></b></div>
+<div class="fix"><div class="text7"><b><a href="index.html" target="_self"><img width="90px" height="90px" src="house.png"></a></b></div></div>
 
 </body>
 </html>
