--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
 
 <div class="textn">АГРОУСАДЬБА "GREEN HOUSE"</div>
     
-    <div class="text1"><b><a href="uslugi.html"
-    target="_self">Услуги</a></b></div> <div class="text2"><b><a
+    <div class="text1"><b><a href="uslugi.html" target="_self">Услуги</a></b></div> <div class="text2"><b><a
     href="ceny.html" target="_self">Цены</a></b></div> <div
     class="text3"><b><a href="bronirovanie.html"
     target="_self">Бронирование</a></b></div> <div class="text4"><b><a
@@ -35,6 +34,7 @@
     <div class="k5"><a href="photo.html" target="_self"><img width="150px" height="150px" src="photo.png"></a></div>
 
     <div class="k6"><a href="onas.html" target="_self"><img width="150px" height="150px" src="onas.png"></a></div>
+    
 
 </body>
 </html>
