--- a/photo.html
+++ b/photo.html
@@ -1,19 +1,114 @@
 <html>
 <head>
+  <meta charset="utf-8">
+<meta name="viewport" content="width=device-width">
   <title>Services</title>
   <link rel="stylesheet" href="style.css">
   <script src="s.js"></script>
+<meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 </head>
 
 <body bgcolor="e2fff4">
 
 <div class="container">
-    <div class="fix"><img src = "agr.png" class="image"><div class="textnusl">АГРОУСАДЬБА "GREEN HOUSE"</div></div>
+    <div class="fix"><div class="textnusl">АГРОУСАДЬБА "GREEN HOUSE"</div></div>
 
     <div class="text9">Фото</div>
 
 </div>
+
+
+
+<div class="fix">
+ <div class="carousel">
+            <div class="carousel-window">
+                <div class="carousel-slides">
+                    <div class="carousel-item">
+                    <img src="12.jpg" alt="">
+                    </div>
+                    <div class="carousel-item">
+                    <img src="1.jpg" alt="">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="2.jpg" alt="">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="3.jpg" alt="">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="4.jpg" alt="">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="5.jpg" alt="">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="6.jpg" alt="">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="7.jpg" alt="">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="8.jpg" alt="">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="9.jpg" alt="">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="10.jpg" alt="">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="11.jpg" alt="">
+                    </div>                    
+                    <div class="carousel-item">
+                        <img src="13.jpg" alt="">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="14.jpg" alt="">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="15.jpg" alt="">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="16.jpg" alt="">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="17.jpg" alt="">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="18.jpg" alt="">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="19.jpg" alt="">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="20.jpg" alt="">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="21.jpg" alt="">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="22.jpg" alt="">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="23.jpg" alt="">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="24.jpg" alt="">
+                    </div>
+                </div>
+            </div>
+            <a href="#" class="carousel-prev">
+                <span class="carousel-prev-icon">&lt;</span>
+            </a>
+            <a href="#" class="carousel-next">
+                <span class="carousel-next-icon">&gt;</span>
+            </a>
+        </div>
+</div>
+
 
 
 <a href="#img1">
@@ -191,6 +286,7 @@
 <a href="#" class="lightbox" id="img0">
   <span style="background-image: url('24.jpg')"></span>
 </a>
+
 
 
 
