--- a/bronirovanie.html
+++ b/bronirovanie.html
@@ -10,7 +10,6 @@
 <div class="container">
     <div class="fix"><img src = "agr.png" class="image"><div class="textnusl">АГРОУСАДЬБА "GREEN HOUSE"</div></div>
 
-<div class="text9">Бронирование</div>
 
 <div class="text8">Заполните форму ниже, нажмите кнопку «Отправить».<br>
 Наши менеджеры с радостью произведут расчет стоимости услуг и свяжутся с Вами в кратчайшее время.</div>  
@@ -41,10 +40,12 @@
             
 </form>
 
+
+    <div class="fix"><div class="sq"></div><div class="text9">Бронирование</div></div>
+
 </div>
 
 <div class="text7"><b><a href="index.html" target="_self"><img width="90px" height="90px" src="house.png"></a></b></div>
-
 
 
 
