--- a/uslugi.html
+++ b/uslugi.html
@@ -9,8 +9,6 @@
 <div class="container">
     <div class="fix"><img src = "agr.png" class="image"><div class="textnusl">АГРОУСАДЬБА "GREEN HOUSE"</div></div>
 
-    <div class="text9">Услуги</div>
-
 
 
 <div class="round7"></div><div class="usl1">ПРОЖИВАНИЕ</div>
@@ -47,8 +45,12 @@
     <li>площадка с мангалами для шашлыка, казан для ухи.</li>
 </ul></div>
 
+
+    <div class="fix"><div class="sq"></div><div class="text9">Услуги</div></div>
+
+
 </div>
-<div class="text7"><b><a href="index.html" target="_self"><img width="90px" height="90px" src="house.png"></a></b></div>
+<div class="fix"><div class="text7"><b><a href="index.html" target="_self"><img width="90px" height="90px" src="house.png"></a></b></div></div>
 
 </body>
 </html>
